--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -428,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'open sans', sans-serif;
 }
 
-section:nth-child(even):not(:only-of-type) {
+section:not(.projects):nth-child(even):not(:only-of-type) {
     background-color: #{{ site.color.primary }};
     color: #fff;
 }
