--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -477,6 +477,10 @@ section.projects .row:not(:last-child):not(:only-child){
     margin-right: 0px; !important
 }
 
+.projects .img-responsive{
+    margin-bottom: 15px;
+}
+
 @media only screen and (min-width : 768px) {
     .is-table {
         display: table;
