--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -473,8 +473,8 @@ section.projects .row:not(:last-child):not(:only-child){
 }
 
 .projects .row {
-    margin-left: 0px; !important
-    margin-right: 0px; !important
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
 
 .projects .img-responsive{
