--- a/_includes/js_all.html
+++ b/_includes/js_all.html
@@ -1,1 +1,12 @@
+ <!-- jQuery Version 1.11.0 -->
+<script src="{{ "/js/jquery-1.11.0.js" }}"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="{{ "/js/bootstrap.min.js" }}"></script>
+
+<!-- Plugin JavaScript -->
+<script src="{{ "/js/jquery.easing.min.js" }}"></script>
+<script src="{{ "/js/classie.js" }}"></script>
+<script src="{{ "/js/cbpAnimatedHeader.js" }}"></script>
+
 <script src="{{ "/js/menu.js" }}"></script>
