--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                 <img class="img-responsive img-banner" src="img/{{ site.header.image }}" alt="Ling Qian Banner Image">
                 <div class="quote">
                     <h1>My Vision</h1>
-                    <p>As an Instructional Designer, I focuse on the design and development of online/hybrid courses and assisting instructors in improving their teaching skills and experiences.</p>                  
+                    <p>As an Instructional Designer, I focus on the design and development of online/hybrid courses and assisting instructors in improving their teaching skills and experiences.</p>                  
 
                 </div>
             </div>
