--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>I worked as an instructional designer and a faculty member in higher education in the past eight years. After pursuing my second master's degree in Instructional Systems Technology at Indiana University Bloomington, I will continue to work in higher education. </p>
+                <p>I habe been working as an instructional designer and a faculty member in higher education for ten years. After pursuing my second master's degree in Instructional Systems Technology at Indiana University Bloomington, I am now an instructional designer at the University of Akron. </p>
                 <p> I have extensive knowledge in Instructional Design, adult learning, and cutting-edge learning technologies. I would like to use my professional knowledge to help faculty improve their teaching through technology. Please feel free to contact me if you have any questions about my portfolio.</p>
             </div>
             <div class="col-lg-4">
